src/retrieveCodeoutput/unpackaged/objects/Exam_Results_Detail__c.object
<CustomObject>
    <description>This has results of every question on every exam taken</description>
    <fields>
        <fullName>Choice1__c</fullName>
        <label>Choice1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Choice2__c</fullName>
        <label>Choice2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Choice3__c</fullName>
        <label>Choice3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Clicked_Hint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clicked Hint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Correct_Answer__c</fullName>
        <label>Correct Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Difficulty__c</fullName>
        <label>Difficulty</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exam_Instance__c</fullName>
        <label>Exam Instance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exam__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Exam</label>
        <referenceTo>Exam__c</referenceTo>
        <relationshipLabel>Exams Results Detail</relationshipLabel>
        <relationshipName>Exams_Results_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Flex_Tag_1__c</fullName>
        <label>Flex Tag 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flex_Tag_2__c</fullName>
        <label>Flex Tag 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flex_Tag_3__c</fullName>
        <label>Flex Tag 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hint__c</fullName>
        <label>Hint</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>My_Exam__c</fullName>
        <label>My Exam</label>
        <referenceTo>Exam_Instance__c</referenceTo>
        <relationshipLabel>Exams Results Detail</relationshipLabel>
        <relationshipName>Exams_Results_Detail</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quest__c</fullName>
        <label>Quest</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Student_Answer__c</fullName>
        <label>Student Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tags__c</fullName>
        <label>Tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Taker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Taker</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Exams Results Detail</relationshipLabel>
        <relationshipName>Exams_Results_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_Taken__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Time Taken</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fCorrect__c</fullName>
        <formula>IF ( Student_Answer__c ==  Correct_Answer__c,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>fCorrect</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fIncorrect__c</fullName>
        <formula>IF( ISBLANK( Student_Answer__c ) ||  Student_Answer__c == &apos;-&apos; || Student_Answer__c !=  Correct_Answer__c, 1, 0)</formula>
        <label>fIncorrect</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fOmit__c</fullName>
        <formula>IF(ISBLANK(Student_Answer__c) || (Student_Answer__c == &apos;-&apos;),1,0)</formula>
        <label>fOmit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Exam Results Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>Exam__c</columns>
        <columns>Test_Taker__c</columns>
        <columns>My_Exam__c</columns>
        <columns>Quest__c</columns>
        <columns>Clicked_Hint__c</columns>
        <columns>Time_Taken__c</columns>
        <columns>Difficulty__c</columns>
        <columns>Correct_Answer__c</columns>
        <columns>Student_Answer__c</columns>
        <columns>Score__c</columns>
        <columns>fCorrect__c</columns>
        <columns>fIncorrect__c</columns>
        <columns>fOmit__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Exam Results Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exams Results Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>